# osm-pbf2json

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE  Readme.md
.github/workflows/: ci.yaml  coverage.yaml
benches/: alexanderplatz.pbf  osm.rs
src/: filter.rs  main.rs  osm.rs
src/lib/: admin.rs  chainable.rs  filter.rs  geo.rs  geojson.rs  items.rs  mod.rs  output.rs  roads.rs  streets.rs  test_helpers.rs
src/osm/: geo.rs  mod.rs
tests/: integration_test.rs
tests/data/: wilhelmstrasse.pbf
