[package]
name = "osm_pbf2json"
version = "0.2.0"
authors = ["magnus kulke <mkulke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
osmpbfreader = "0.13"
geo = "0.14"
geo-types = "0.6"
rand = "0.7"
petgraph = "0.5"
rstar = "0.8"
rayon = "1.3"
osm_boundaries_utils = "0.6"

[dev-dependencies]
criterion = "0.3"
approx = "0.3"

[[bench]]
name = "osm"
harness = false

[lib]
name = "osm_pbf2json"
path = "src/lib/mod.rs"

[[bin]]
name = "osm_pbf2json"
path = "src/main.rs"
test = false
