[package]
name = "osm_pbf2json"
version = "0.3.0"
authors = ["magnus kulke <mkulke@gmail.com>", "edouard poitras <edouardpoitras@gmail.com>"]
edition = "2018"
homepage = "https://github.com/mkulke/osm-pbf2json"
readme = "Readme.md"
repository = "https://github.com/mkulke/osm-pbf2json"
license = "MIT"
keywords = ["osm", "openstreetmap", "geo", "pbf"]
categories = ["command-line-utilities", "encoding", "parsing", "science"]
description = "A parser/filter/processor for OSM protobuf bundles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
osmpbfreader = "0.14"
geo = "0.14"
geo-types = "0.6"
rand = "0.7"
petgraph = "0.5"
rstar = "0.8"
rayon = "1.3"
osm_boundaries_utils = "0.7"
smartstring = "0.2"

[dev-dependencies]
criterion = "0.3"
approx = "0.3"
geojson = "0.19"

[[bench]]
name = "osm"
harness = false

[lib]
name = "osm_pbf2json"
path = "src/lib/mod.rs"

[[bin]]
name = "osm_pbf2json"
path = "src/main.rs"
test = false
